tests/miniJava/pos/001112_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java extends java { public int [] java ( ) { return 0 ; } }
