tests/miniJava/neg/004764_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( ) { return ] 0 ; } }
